<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header_image"
            android:layout_width="0dp"
            android:layout_height="104dp"
            android:contentDescription="@string/header_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/header" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="52dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="103dp"
                    android:layout_height="103dp"
                    android:contentDescription="@string/profile_picture"
                    app:layout_constraintDimensionRatio="1 : 1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/pasfoto" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/username_text"
            style="@style/text_styles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="8dp"
            android:text="@string/dede_kurniawan"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/header_image" />

        <TextView
            android:id="@+id/bio_short_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:text="@string/freelance_graphic_designer_at_fiverr"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/username_text" />

        <ImageView
            android:id="@+id/map_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:contentDescription="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:srcCompat="@android:drawable/ic_menu_mapmode"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="20dp"
            android:text="@string/bandar_lampung_lampung_id"
            app:layout_constraintStart_toEndOf="@+id/map_image"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />


        <ScrollView
            android:layout_width="409dp"
            android:layout_height="531dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map_image">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_me_text"
                    style="@style/text_styles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/text_margin"/>

                <TextView
                    android:id="@+id/bio_long_text"
                    style="@style/text_styles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/bio_text"
                    android:padding="@dimen/text_margin"/>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>